[package]
categories = ["graphics"]
description = "A library to extract prominent colors from an image"
edition = "2021"
keywords = ["graphics", "palette", "image", "color", "quantize"]
license-file = "LICENSE"
name = "prominence"
repository = "https://github.com/Spanfile/Prominence"
version = "0.1.0"

exclude = [
  ".vscode",
]

[dependencies]
image = "0.24.2"
rand = "0.8.5"

serde = {version = "1.0.137", features = ["derive"], optional = true}

[features]
serde = ["dep:serde"]
